# ProyCienDatos2025-2

./: README.md  esteban.md  pyproject.toml
Módulo 1/: Clase0_GuiaProyCienDatos.ipynb  Clase1_IntroPython.ipynb  Clase2_GitTutorial.ipynb  Clase3_CLI.ipynb  Clase4_EntornosVirtuales.ipynb  Clase5_API.ipynb  Clase6_FastAPI.ipynb  Clase7_TrabajoEnClaseProyecto.ipynb
Módulo 2/: Clase8_IntroMLOps.ipynb  Clase9_LevelsMLSoftware.ipynb
Módulo 3/: Clase10_ExperimentTracking.ipynb  Clase11_ModelRegistry.ipynb  Clase12_MLFlow&DagsHub.ipynb  Clase12_MLFlow&Databricks.ipynb  Clase13_MLPipelines.ipynb  Clase14_ModelAsAService&Streamlit.ipynb  Clase15_TrabajoEnClaseProyecto.ipynb  Clase16_Containers&Docker.ipynb  Clase17_DockerNetwork&DockerCompose.ipynb  Clase18_CloudComputing.ipynb  Clase19_FechasFinales.ipynb  GuiaProyecto.ipynb
