[project]
name = "proyciendatos2025-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "mlflow>=3.5.0",
    "pandas>=2.3.2",
    "prefect>=3.4.25",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
